# DeepScry

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  MIMALLOC_RESULTS.md  Makefile  OPTIMIZATION.md  PLAN.md  PRIORITIES.md  README.md  Trunk.toml  benchmark_batch_logging.txt  benchmark_par_baseline.txt  benchmark_seq_baseline.txt  benchmark_serialization.sh  deck_list  editions  package.json  quick_bench.sh  rust-toolchain.toml  test_event_driven_overlay.js
.beads/: .gitignore  config-minibeads.yaml  issues.jsonl  kill_db.sh
.cargo/: config.toml
agentplay/: README.md  __init__.py  agent_game.py  continue_game.py  continue_game.sh  current.game  engine.py  (+10 more)
mtg-benchmarks/: Cargo.toml
mtg-benchmarks/benches/: allocator.rs  core_benches.rs  dhat_profile.rs  game_benchmark.rs  java_benchmark.rs  pinned_thread_pool.rs  puzzle_parse_benchmark.rs  rewind_play_again_module.rs
mtg-benchmarks/benches/lib/: benches.rs  mod.rs  par_utils.rs  rewind_play_again.rs  types.rs  utils.rs
mtg-benchmarks/examples/: core_affinity_test.rs
mtg-benchmarks/lib/: mod.rs  par_utils.rs  types.rs  utils.rs
mtg-engine/: .gitignore  Cargo.toml  build.rs  cardsfolder
mtg-engine/decks/: julian_spiderman_draft.dck  ryan_spiderman_draft.dck
mtg-engine/examples/: activated_abilities_expanded_demo.rs  activated_ability_demo.rs  ai_vs_ai_game.rs  artifact_enchantment_demo.rs  basic_land_demo.rs  bench_logging_overhead.rs  combat_demo.rs  counterspell_demo.rs  etb_triggers_demo.rs  etb_triggers_expansion_demo.rs  heap_profile_game.rs  lightning_bolt_game.rs  lightning_bolt_game_v3.rs  load_puzzle.rs  lobby_probe.rs  mana_ability_demo.rs  measure_rewind_replay.rs  microbench_choice_context.rs  sacrifice_cost_demo.rs  test_bincode_skip.rs  test_real_equipment.rs
mtg-engine/src/: asset_hash.rs  deck_builder.rs  download.rs  error.rs  lib.rs  main.rs  scryfall.rs  scryfall_table.rs  tournament.rs  undo.rs  version.rs  zones.rs
mtg-engine/src/core/: README.md  allocator.rs  card.rs  costs.rs  delayed_trigger.rs  effects.rs  entity.rs  keyword_set.rs  mana.rs  mana_production.rs  mod.rs  persistent_effect.rs  player.rs  prevention.rs  spell_ability.rs  types.rs
mtg-engine/src/core/effects/: README.md  activated_ability.rs  mod.rs  static_abilities.rs  target_restriction.rs  triggers.rs
mtg-engine/src/deck_builder/: events.rs  mod.rs  native.rs  state.rs  ui.rs
mtg-engine/src/game/: README.md  actions.rs  arena.rs  battlefield_layout.rs  card_image.rs  combat.rs  combat_rules.rs  command_parsing.rs  continuous_effects.rs  controller.rs  controller_tests.rs  counter_tests.rs  display.rs  fancy_fixed_controller.rs  fancy_tui_controller.rs  fancy_tui_events.rs  fancy_tui_renderer.rs  fixed_script_controller.rs  game_loop.rs  game_state_evaluator.rs  graveyard_display.rs  hand_setup.rs  heuristic_controller.rs  interactive_controller.rs  layout.rs  log_event.rs  logger.rs  logger_old.rs  mana_colors.rs  mana_engine.rs  mana_index.rs  mana_payment.rs  mana_source_cache.rs  mod.rs  phase.rs  random_controller.rs  replay_controller.rs  rich_input_controller.rs  seed_derivation.rs  snapshot.rs  (+5 more)
mtg-engine/src/game/actions/: combat.rs  mod.rs  targeting.rs  triggers.rs
mtg-engine/src/game/actions/effects/: bending.rs  cards.rs  control.rs  counters.rs  damage.rs  life.rs  misc.rs  mod.rs  pump.rs  repeat.rs  stack.rs  tapping.rs  tokens.rs  zones.rs
mtg-engine/src/game/actions/tests/: basic_actions.rs  combat.rs  combat_bugfixes.rs  effects.rs  equipment.rs  keywords.rs  level_up.rs  mod.rs  netarch_reserved_zone.rs  ratchet_bomb.rs  spell_casting.rs
mtg-engine/src/game/battlefield_layout/: engine.rs  geometry.rs  mod.rs  types.rs
mtg-engine/src/game/game_loop/: actions.rs  combat.rs  legacy.rs  logging.rs  mod.rs  network_choice.rs  priority.rs  snapshot.rs  steps.rs
mtg-engine/src/game/heuristic_controller/: README.md  abilities.rs  combat.rs  creature_eval.rs  mana_lands.rs  mod.rs  spell_eval.rs  spell_selection.rs  tests.rs
mtg-engine/src/game/mana_payment/: README.md  mod.rs  payment_execution.rs
mtg-engine/src/loader/: README.md  ability_parser.rs  card.rs  cardsfolder.rs  database_async.rs  deck.rs  deck_async.rs  edition.rs  effect_converter.rs  game_init.rs  mod.rs  svar_parser.rs
mtg-engine/src/network/: README.md  action_log.rs  choice_decode.rs  choice_entry.rs  client.rs  controller.rs  lobby.rs  local_controller.rs  memory.rs  mod.rs  mvar.rs  protocol.rs  remote_controller.rs  reveal_processor.rs  server.rs  state_sync.rs
mtg-engine/src/puzzle/: README.md  card_notation.rs  format.rs  loader.rs  metadata.rs  mod.rs  state.rs
mtg-engine/src/puzzle/assert/: evaluator.rs  mod.rs  parser.rs
mtg-engine/src/wasm/: README.md  deck_builder.rs  fancy_tui.rs  gui_view_model.rs  human_controller.rs  image_overlay.rs  mod.rs  replay_verifier.rs  rich_input_controller.rs
mtg-engine/src/wasm/network/: ai_harness.rs  client.rs  exports.rs  game_init.rs  local_controller.rs  mod.rs  remote_controller.rs
mtg-engine/src/web_server/: mem_cgroup.rs  mod.rs  oauth.rs  r2.rs
mtg-engine/tests/: asset_graph_hash.rs  bargain_count_expression_test.rs  bazaar_rewind_loop_e2e.rs  blocker_legality_test.rs  card_loading.rs  combustion_technique_tests.rs  controlled_draw_e2e.sh  creature_evaluation_test.rs  database_load.rs  determinism_e2e.rs  earthbend_tests.rs  extra_land_play_test.rs  firebend_tests.rs  human_input_e2e.rs  interactive_tui_e2e.sh  library_reorder_undo_e2e.rs  lobby_protocol.rs  mana_cache_debug_stress_test.rs  netarch_lockstep_oracle_e2e.rs  network_e2e.rs  per_set_roundtrip.rs  proptest_invariants.rs  put_cards_from_hand_on_top_test.rs  puzzle_assert_e2e.rs  puzzle_bulk_runner.rs  puzzle_e2e.rs  puzzle_golden_check.rs  puzzle_load_e2e.sh  rewind_replay_hash_roundtrip_e2e.rs  rewind_replay_oracle_e2e.rs  run_stress_tests.sh  scry_surveil_choice_pipeline_test.rs  scry_surveil_parity_test.rs  seismic_sense_dig_e2e.rs  shell_script_tests.rs  test_peter_porker_bug.rs  test_spider_suit_equipment.rs  tui_e2e.rs  undo_choice_point_latent_holes_e2e.rs  undo_e2e.rs  (+7 more)
(+2657 files in other folders)
