# Phase 1 build determinism experiment: opt in to the unstable `trim-paths`
# profile field. Requires nightly cargo (this repo pins nightly-2025-11-28).
# See .cargo/config.toml for the [profile.*] settings that consume it.
cargo-features = ["trim-paths"]

[workspace]
resolver = "2"
members = [
    "mtg-engine",
    "mtg-benchmarks",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

# Slim profile used by `scripts/deploy-cloud.sh` for the deployed `mtg`
# server binary. Design:
#   - The default `release` profile intentionally keeps `debug = true` so
#     local engineers can run flamegraphs / `perf` / `samply` against the
#     same binary they ship-test. That produces a ~430 MB artifact, which
#     is fine on a workstation but wasteful to rsync to a VM.
#   - This profile strips symbols and tightens codegen so the deployed
#     binary lands around ~25 MB. It does NOT touch `[profile.release]`,
#     so `cargo build --release` keeps its debug symbols.
#   - `panic = "abort"` is a meaningful size win and acceptable for the
#     server: it runs under systemd and shuts down via SIGTERM, so it
#     never relies on unwinding for cleanup. The tradeoff is that any
#     panic terminates the process immediately (no `catch_unwind`).
#   - Cargo profiles cannot enable features, so the deploy script must
#     pass `--features network` on the build invocation explicitly.
[profile.release-deploy]
inherits = "release"
debug = false
strip = "symbols"
lto = "fat"
codegen-units = 1
panic = "abort"

# Slim profile used by the GitHub CI `build-nextest-arch` job (and any local
# `cargo nextest archive --cargo-profile ci-archive`). Design:
#   - The default `release` profile intentionally keeps `debug = true` so local
#     engineers can run flamegraphs / `perf` / `samply`. Across the ~37
#     integration-test binaries nextest archives, that full-debuginfo bloats the
#     CI nextest archive to ~2.34 GB, which EVERY validate shard downloads
#     before testing (~16 GB of transfer across the fan-out). Real CI latency.
#   - This profile inherits `release` (so optimisation level + codegen match the
#     `--release` native binary the e2e scripts run) but emits only
#     line-tables-only debuginfo. That keeps file:line in test backtraces /
#     panic locations while dropping the heavy variable/type DWARF, cutting the
#     archive size dramatically. It does NOT touch `[profile.release]`, so
#     `cargo build --release` and local profiling keep full debug symbols.
#   - Build-once-test-many is preserved: `cargo nextest archive` embeds the
#     built binaries + metadata in the archive, and the consuming
#     `cargo nextest run --archive-file` shards reuse those binaries verbatim
#     (no rebuild, no `--cargo-profile` on the run side), so there is no
#     profile-name mismatch between the archive producer and the run shards.
#   - Cargo profiles cannot enable features, so the CI job passes
#     `--features network` on the archive invocation explicitly (matching
#     BUILD_FLAGS' feature set).
[profile.ci-archive]
inherits = "release"
debug = "line-tables-only"

# Workspace-wide lint configuration
[workspace.lints.clippy]
# DENY wildcard enum match arms - these can silently fail when new variants are added
# Use #[allow(clippy::wildcard_enum_match_arm)] with comment citing mtg-211 for exceptions
# See .beads/issues/mtg-211.md for the wildcard audit tracking issue
wildcard_enum_match_arm = "deny"

# Deny debug artifacts that should never be committed
dbg_macro = "deny"
todo = "deny"

# Code quality - nursery lints
derive_partial_eq_without_eq = "warn"
collection_is_never_read = "warn"
redundant_clone = "warn"
or_fun_call = "warn"

# Code quality - pedantic lints
unnested_or_patterns = "warn"
redundant_closure = "warn"
cast_lossless = "warn"

# Safety - restriction lints
clone_on_ref_ptr = "warn"

# Documentation quality - pedantic lints
missing_panics_doc = "warn"
missing_errors_doc = "warn"
