# Phase 1 build determinism experiment: opt in to the unstable `trim-paths`
# profile field. Requires nightly cargo (this repo pins nightly-2025-11-28).
# See .cargo/config.toml for the [profile.*] settings that consume it.
cargo-features = ["trim-paths"]

[workspace]
resolver = "2"
members = [
    "mtg-engine",
    "mtg-benchmarks",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[profile.release]
# Release is the ordinary optimized profile used by validation, CI artifacts,
# and normal local release builds. Keep full debuginfo out of this profile so
# `target/release/` stays reasonably small.
#
# If CI/runtime backtraces need file:line information without full profiling
# debuginfo, consider enabling this compromise:
# debug = "line-tables-only"

# Profiling keeps release optimizations while preserving full debuginfo for
# flamegraphs, perf, heaptrack, and other source-level profiling tools.
[profile.profiling]
inherits = "release"
debug = true

# Slim profile used by `scripts/deploy-cloud.sh` for the deployed `mtg`
# server binary. It currently keeps deployment-specific size/codegen choices
# separate from normal release so we can measure whether they still pay for
# themselves after `[profile.release]` stops carrying full debuginfo.
[profile.release-deploy]
inherits = "release"
strip = "symbols"
lto = "fat"
codegen-units = 1
panic = "abort"

# Workspace-wide lint configuration
[workspace.lints.clippy]
# DENY wildcard enum match arms - these can silently fail when new variants are added
# Use #[allow(clippy::wildcard_enum_match_arm)] with comment citing mtg-211 for exceptions
# See .beads/issues/mtg-211.md for the wildcard audit tracking issue
wildcard_enum_match_arm = "deny"

# Deny debug artifacts that should never be committed
dbg_macro = "deny"
todo = "deny"

# Code quality - nursery lints
derive_partial_eq_without_eq = "warn"
collection_is_never_read = "warn"
redundant_clone = "warn"
or_fun_call = "warn"

# Code quality - pedantic lints
unnested_or_patterns = "warn"
redundant_closure = "warn"
cast_lossless = "warn"

# Safety - restriction lints
clone_on_ref_ptr = "warn"

# Documentation quality - pedantic lints
missing_panics_doc = "warn"
missing_errors_doc = "warn"
