[package]
name = "mtg-benchmarks"
version.workspace = true
edition.workspace = true
publish = false
autobenches = false

[dependencies]
# Main engine as library dependency
mtg-forge-rs = { path = "../mtg-engine" }

# Benchmark framework
criterion = "0.5"

# Allocation tracking and profiling
stats_alloc = "0.1"
mimalloc = "0.1"
tikv-jemallocator = "0.6"
tikv-jemalloc-ctl = "0.6"
dhat = "0.3"

# Required for benchmark code
tokio = { version = "1.0", features = ["rt-multi-thread", "fs", "macros", "time", "sync"] }
tempfile = "3.10.1"
libc = "0.2"
clap = { version = "4.5", features = ["derive"] }

# Parallel execution (used by benchmarks)
rayon = "1.10"
num_cpus = "1.16"
core_affinity = "0.8"

# Binary targets
[[bin]]
name = "rewind_bench"
path = "bin/rewind_bench.rs"

# Performance benchmarks
[[bench]]
name = "game_benchmark"
harness = false

[[bench]]
name = "puzzle_parse_benchmark"
harness = false

[[bench]]
name = "dhat_profile"
harness = false

[features]
# Benchmark allocator selection (mutually exclusive)
# Default: stats_alloc with allocation tracking enabled
# bench-stats-alloc: System allocator with allocation tracking (DEFAULT)
# bench-mimalloc: mimalloc for maximum performance (no tracking)
# bench-jemalloc: jemalloc with optional stats support
default = ["bench-stats-alloc"]
bench-stats-alloc = []
bench-mimalloc = []
bench-jemalloc = []
