[package]
name = "mtg-forge-rs"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mtg"
path = "src/main.rs"
# Binary only built for native targets (not WASM)
required-features = ["native"]

[lib]
name = "mtg_forge_rs"
path = "src/lib.rs"
# Library can be built for WASM without native features
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
bincode = "1.3.3"

# Collections
smallvec = { version = "1.11", features = ["serde", "union"] }
smallmap = { version = "1.4", features = ["serde"] }
bumpalo = { version = "3.16", features = ["collections", "allocator_api"] }
enumset = { version = "1.1", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Parsing
nom = "7.1"
deunicode = "1.6"  # Unicode to ASCII normalization for card names

# Random number generation
rand = { version = "0.8", features = ["serde1"] }
rand_chacha = { version = "0.3", features = ["serde1"] }
rand_xoshiro = { version = "0.6", features = ["serde1"] }

# Hashing (for fast lookups)
rustc-hash = "1.1"

# CLI argument parsing (native only)
clap = { version = "4.5", features = ["derive"], optional = true }

# TUI (native only)
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true }
signal-hook = { version = "0.3", optional = true }
libc = { version = "0.2", optional = true }  # For signal handling (raise)

# Async runtime (native only)
tokio = { version = "1.0", features = ["rt-multi-thread", "fs", "macros", "time", "sync"], optional = true }

# Parallel directory walking (native only)
jwalk = { version = "0.8", optional = true }

# Parallel execution (native only)
rayon = { version = "1.10", optional = true }
num_cpus = { version = "1.16", optional = true }

# High-performance allocator (native only)
mimalloc = { version = "0.1", optional = true }

# File globbing (native only, for export command)
glob = { version = "0.3", optional = true }

# WASM-specific dependencies
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }

[dev-dependencies]
dir-test = "0.4"
similar-asserts = "1.5"
tempfile = "3.10.1"

[features]
# Default builds include native features (CLI, TUI, async file loading)
default = ["native", "verbose-logging"]

# Enable verbose game event logging (format! allocations)
# Disable this feature for maximum performance in benchmarks
verbose-logging = []

# Native platform features (CLI, TUI, file I/O, threading)
native = [
    "clap",
    "ratatui",
    "crossterm",
    "signal-hook",
    "libc",
    "tokio",
    "jwalk",
    "rayon",
    "num_cpus",
    "mimalloc",
    "glob",
]

# WASM target features (browser-compatible, no threading)
wasm = [
    "wasm-bindgen",
    "js-sys",
    "web-sys",
    "getrandom",
]
