[package]
name = "mtg-engine"
version.workspace = true
edition.workspace = true
description = "A Rust reimplementation of the MTG Forge game engine"
repository = "https://github.com/rrnewton/mtg-forge-rs"
license = "GPL-3.0"
build = "build.rs"

[[bin]]
name = "mtg"
path = "src/main.rs"
# Binary only built for native targets (not WASM)
required-features = ["native"]

# `lobby_probe` is a hand-runnable smoke test for the lobby protocol —
# it links `tokio-tungstenite` and `futures-util` directly, both of
# which are gated behind the `network` feature. Without a
# `required-features` declaration, cargo would try to build it under
# default features (CI's `Test` job runs without `--features network`)
# and fail at `use futures_util::...` / `use tokio_tungstenite::...`.
[[example]]
name = "lobby_probe"
path = "examples/lobby_probe.rs"
required-features = ["network"]

[lib]
name = "mtg_engine"
path = "src/lib.rs"
# Library can be built for WASM without native features
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
bincode = "1.3.3"

# Collections
smallvec = { version = "1.11", features = ["serde", "union"] }
smallmap = { version = "1.4", features = ["serde"] }
bumpalo = { version = "=3.16.0", features = ["collections", "allocator_api"] }
enumset = { version = "1.1", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Parsing
nom = "7.1"
deunicode = "1.6"  # Unicode to ASCII normalization for card names

# Random number generation
rand = { version = "0.8", features = ["serde1"] }
rand_chacha = { version = "0.3", features = ["serde1"] }
rand_xoshiro = { version = "0.6", features = ["serde1"] }

# Hashing (for fast lookups)
rustc-hash = "1.1"
# Content-addressed asset hashing: single source of truth for the CAS pipeline
# (per-set bins + the wasm pkg pair). blake3 truncated to 16 hex chars. (mtg-571)
blake3 = "1.5"

# CLI argument parsing (native only)
clap = { version = "4.5", features = ["derive", "env"], optional = true }

# TUI (ratatui shared between native and wasm, crossterm native-only)
# Version 0.29 required for egui_ratatui 2.0 compatibility
ratatui = { version = "0.29", default-features = false, optional = true }
crossterm = { version = "0.28", optional = true }
signal-hook = { version = "0.3", optional = true }
libc = { version = "0.2", optional = true }  # For signal handling (raise)

# WASM TUI (egui-based ratatui rendering) - see [target.'cfg(...)'.dependencies] section below

# Async runtime (native only)
# Note: "net" feature is required for network (WebSocket) support
tokio = { version = "1.0", features = ["rt-multi-thread", "fs", "macros", "time", "sync", "net", "signal"], optional = true }

# Parallel directory walking (native only)
jwalk = { version = "0.8", optional = true }

# Parallel execution (native only)
rayon = { version = "1.10", optional = true }
num_cpus = { version = "1.16", optional = true }

# High-performance allocator (native only)
mimalloc = { version = "0.1", optional = true }

# File globbing (native only, for export command)
glob = { version = "0.3", optional = true }

# Networking (native only)
tokio-tungstenite = { version = "0.26", optional = true, features = ["rustls-tls-webpki-roots"] }
futures-util = { version = "0.3", optional = true }
futures-executor = { version = "0.3", optional = true }

# HTTP client for image downloading (native only)
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false, optional = true }

# Progress bar for downloads (native only)
indicatif = { version = "0.17", optional = true }

# Unified web server: axum + static-file middleware + optional rustls TLS.
# Gated behind the `web-server` feature (which the `network` feature
# enables by default). Lets one process serve `web/`, terminate TLS, AND
# proxy the lobby WebSocket — replacing the prior dual-process
# (python http.server + `mtg server`) deploy.
axum = { version = "0.7", features = ["ws", "macros"], optional = true }
axum-server = { version = "0.7", features = ["tls-rustls"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = [
    "fs",
    "trace",
    "set-header",
    "compression-gzip",
], optional = true }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"], optional = true }
rustls-pemfile = { version = "2", optional = true }

# WASM-specific dependencies
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "HtmlImageElement",
    "HtmlElement",
    "CssStyleDeclaration",
    "NodeList",
    "Event",
], optional = true }
getrandom = { version = "0.2", features = ["js"], optional = true }
console_log = { version = "1.0", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
ratatui-image = { version = ">=3,<10", default-features = false, features = ["crossterm", "image-defaults"], optional = true }
image = { version = "0.25", default-features = false, features = ["jpeg"], optional = true }

[dev-dependencies]
dir-test = "0.4"
similar-asserts = "1.5"
tempfile = "3.10.1"

# WASM-specific dependencies (only for wasm32 target)
[target.'cfg(target_arch = "wasm32")'.dependencies]
# RatZilla: Fast DOM/WebGL2 ratatui backend for browser
ratzilla = { version = "0.2", optional = true }
# Legacy egui-based backend (kept for reference, may be removed)
egui_ratatui = { version = "2.0", optional = true, default-features = false }
soft_ratatui = { version = "0.1", optional = true, default-features = false, features = ["cosmic-text"] }
eframe = { version = "0.33", optional = true, default-features = false, features = ["glow", "web_screen_reader", "default_fonts"] }
wasm-bindgen-futures = { version = "0.4", optional = true }

[features]
# Default builds include native features (CLI, TUI, async file loading)
default = ["native", "verbose-logging"]

# Enable verbose game event logging (format! allocations)
# Disable this feature for maximum performance in benchmarks
verbose-logging = []

# Native platform features (CLI, TUI, file I/O, threading)
native = [
    "clap",
    "native-tui",
    "tokio",
    "jwalk",
    "rayon",
    "num_cpus",
    "mimalloc",
    "glob",
    "reqwest",
    "indicatif",
]

# Native TUI features (crossterm-based terminal)
native-tui = [
    "ratatui",
    "ratatui/crossterm",  # Enable crossterm backend for native
    "ratatui-image",
    "crossterm",
    "signal-hook",
    "libc",
]

# WASM target features (browser-compatible, no threading)
wasm = [
    "wasm-bindgen",
    "js-sys",
    "web-sys",
    "getrandom",
    "console_log",
    "console_error_panic_hook",
    "verbose-logging",  # Enable game logging for browser display
]

# WASM TUI features (fancy TUI in browser via RatZilla - fast DOM/WebGL2 rendering)
wasm-tui = [
    "wasm",
    "ratatui",  # Needed for FancyTuiRenderer shared code
    "ratzilla",
]

# Legacy WASM TUI via egui (slow, kept for reference)
wasm-tui-egui = [
    "wasm",
    "ratatui",
    "egui_ratatui",
    "soft_ratatui",
    "eframe",
    "wasm-bindgen-futures",
]

# Networking features (native only - WebSocket client/server)
network = [
    "tokio-tungstenite",
    "futures-util",
    "futures-executor",
    "tokio",  # Needs async runtime
    "web-server",  # Unified HTTP+WS server (axum)
    "rustls",  # `mtg connect wss://...` against the deployed TLS WS lobby
]

# Unified axum web server: static files + lobby WS proxy + optional TLS.
# Always pulled in by `network`; can be enabled standalone for builds
# that only need to serve `web/` without the full network stack.
web-server = [
    "axum",
    "axum-server",
    "tower",
    "tower-http",
    "rustls",
    "rustls-pemfile",
    "tokio",
    "tokio-tungstenite",
    "futures-util",
]

# WASM Networking (browser WebSocket via JavaScript)
# Enables network play in browser - JavaScript manages WebSocket,
# WASM provides non-blocking controllers that return NeedInput
wasm-network = [
    "wasm-tui",  # Network requires TUI base
]
ratatui-image = ["dep:ratatui-image", "dep:image"]


# Inherit workspace lints
[lints]
workspace = true
